Right-align user panel menu. Fixes #13

--- a/servers/www/assets/css/components/userpanel.less
+++ b/servers/www/assets/css/components/userpanel.less
@@ -10,4 +10,8 @@
       left: 6px; top: 3px; width: 20px; height: 20px;
     }
   }
+  .dropdown-menu {
+    right: 0;
+    left: auto;
+  }
 }
